# V4L_Jetson_Nano

Camera Initialization /: CMakeLists.txt  main.cpp
